<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/recordVideoIB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_videocam"
        app:tint="@color/white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/record_video" />

    <ImageButton
        android:id="@+id/FlashIB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/flash_off"
        app:tint="@color/white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/toggle_flash" />

    <ImageButton
        android:id="@+id/FlipIB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/FlashIB"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/flip_camera"
        app:tint="@color/white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/flip_camera" />

    <ImageView
        android:id="@+id/thumbnailIV"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"
        android:contentDescription="Thumbnail" />

    <ImageButton
        android:id="@+id/captureIB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_photo"
        app:tint="@color/white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/capture_image" />

    <Chronometer
        android:id="@+id/recordingTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="00:00"
        android:textColor="@color/white"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/noirIB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/FlipIB"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Gallery"
        android:scaleType="centerCrop"
        android:src="@drawable/noir_button"
        app:tint="@color/white" />

    <Spinner
        android:id="@+id/qualitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="20dp"
        android:contentDescription="Quality Selector"/>


</RelativeLayout>
